--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "vim/vim/bundle/vundle"]
 	path = vim/vim/bundle/vundle
 	url = git://github.com/gmarik/vundle.git
+[submodule "tmux/plugins/tpm"]
+	path = tmux/plugins/tpm
+	url = https://github.com/tmux-plugins/tpm
