--- a/.gitmodules
+++ b/.gitmodules
@@ -10,9 +10,9 @@
 [submodule "lib/mutt-colors-solarized"]
 	path = lib/mutt-colors-solarized
 	url = git://github.com/altercation/mutt-colors-solarized.git
-[submodule "vim/vim/bundle/vundle"]
-	path = vim/vim/bundle/vundle
-	url = git://github.com/gmarik/vundle.git
+;[submodule "vim/vim/bundle/Vundle.vim"]
+	;path = vim/vim/bundle/Vundle.vim
+	;url = https://github.com/VundleVim/Vundle.vim.git
 [submodule "tmux/plugins/tpm"]
 	path = tmux/plugins/tpm
 	url = https://github.com/tmux-plugins/tpm
