--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,7 @@
 [submodule "lib/make-chrome-app"]
 	path = lib/make-chrome-app
 	url = https://gist.github.com/8284acbd2517a7c34af6.git
+[submodule "antigen"]
+	path = antigen
+	url = https://github.com/zsh-users/antigen.git
+	branch = master
